--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ h6{
   text-transform: uppercase;
 }
 /*%%%%%%%%%%%%%% LARGE DEVICE %%%%%%%%%%*/
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 376px) {
   .container1{
     padding: 5%;
     margin: 0 auto;
@@ -96,9 +96,15 @@ h6{
     border-bottom-right-radius: 10px;
       
   }
+
+   
+  
   .continuation{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 90px;
   }
 
   .achievements{
@@ -115,7 +121,8 @@ h6{
   }
 
   h4{
-    font-size: 13px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
     padding: 18px;
     text-align: start;
   }
@@ -194,15 +201,15 @@ h6{
 }
 
  /* %%%%%%%%%%%%%% MEDUIM DEVICE %%%%%%%%%%*/
- @media screen and (min-width: 376px) and (max-width: 1439) {
+ /* @media screen and (min-width: 376px) and (max-width: 1439) {
   .container1{
-    padding: 5%;
-    margin: 0 auto;
-    height: 100vh;
-    
+    padding: 10%;
+     margin: 0 auto;
+    height: 100vh; 
   }
 
   .container2{
+    padding-left: 20px;
     position: relative ;
     display: flex;
     flex-direction: row-reverse;
@@ -211,15 +218,15 @@ h6{
     border-radius: 10px;
     align-items:center;
     text-align: center;
-    
+  
   } 
 
   img{
     width: 100%;
-    height: fit-content;
     overflow: hidden;
     border: none;
     border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
     border-bottom-right-radius: 10px;
       
   }
@@ -236,13 +243,10 @@ h6{
     align-items: center;
     gap: 25px;
   }
-
-  .container2{
-    border-radius: 5px;  
-  }
-
-  h4{
-    font-size: 13px;
+  
+   h4{
+    font-family: 'Inter', sans-serif;
+    font-weight:400;
     padding: 18px;
     text-align: start;
   }
@@ -262,6 +266,5 @@ h6{
     font-weight: 400;
   } 
 
-}
 
- 
+}  */
